crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_with_style.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { $, component$, useStyles$ } from "@qwik.dev/core";

export const Foo = component$(
  () => {
    useStyles$(".class {}");
    return <div class="class" />;
  },
  {
    tagName: "my-foo",
  },
);

============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
export const Foo = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
  {
    tagName: "my-foo",
  },
);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AAEA,OAAO,MAAM,oBAAM,4EAKjB;IACE,SAAS;AACX,GACA"}',
);
============================= test.tsx_Foo_component_XXXXXXXXXXXX.tsx (ENTRY POINT)==
import { qrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_useStyles_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = () => {
  useStylesQrl(/*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Foo_component_useStyles_XXXXXXXXXXXX"));
  return <div class="class" />;
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;yCAGE;IACE;IACA,QAAQ,IAAI,MAAM;AACpB"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    95,
    169
  ]
}
*/
============================= test.tsx_Foo_component_useStyles_XXXXXXXXXXXX.tsx (ENTRY POINT)==
export const Foo_component_useStyles_XXXXXXXXXXXX = ".class {}";

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"mDAIe"}');
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_useStyles_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_useStyles",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_useStyles_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    118,
    129
  ]
}
*/
== DIAGNOSTICS ==

[]
