crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_with_tagname.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { $, component$ } from "@qwik.dev/core";

export const Foo = component$(
  () => {
    return $(() => {
      return <div></div>;
    });
  },
  {
    tagName: "my-foo",
  },
);

============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
export const Foo = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
  {
    tagName: "my-foo",
  },
);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AAEA,OAAO,MAAM,oBAAM,4EAMjB;IACE,SAAS;AACX,GACA"}',
);
============================= test.tsx_Foo_component_XXXXXXXXXXXX.tsx (ENTRY POINT)==
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_1_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = () => {
  return /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Foo_component_1_XXXXXXXXXXXX");
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;yCAGE;IACE;AAGF"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    83,
    149
  ]
}
*/
============================= test.tsx_Foo_component_1_XXXXXXXXXXXX.tsx (ENTRY POINT)==
export const Foo_component_1_XXXXXXXXXXXX = () => {
  return <div></div>;
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"2CAIa;IACP,QAAQ,MAAM;AAChB"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    104,
    143
  ]
}
*/
== DIAGNOSTICS ==

[]
