crates/swc-optimizer/core/src/snapshots/qwik_core__test__issue_476.snap
---
source: src/test.rs
expression: output
---
==INPUT==

import { Counter } from "./counter.tsx";

export const Root = () => {
  return (
    <html>
      <head>
        <meta charset="utf-8" />
        <title>Qwik Blank App</title>
      </head>
      <body>
        <Counter initial={3} />
      </body>
    </html>
  );
};

============================= test.tsx ==

import { Counter } from "./counter.tsx";
export const Root = ()=>{
    return <html>
      <head>
        <meta charset="utf-8"/>
        <title>Qwik Blank App</title>
      </head>
      <body>
        <Counter initial={3}/>
      </body>
    </html>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AAAA,SAAS,OAAO,QAAQ,gBAAgB;AAExC,OAAO,MAAM,OAAO;IAClB,QACG,KAAK;MACJ,CAAC,KAAK;QACJ,CAAC,KAAK,QAAQ,SAAU;QACxB,CAAC,MAAM,cAAc,EAAE,MAAM;MAC/B,EAAE,KAAK;MACP,CAAC,KAAK;QACJ,CAAC,QAAQ,SAAS,IAAK;MACzB,EAAE,KAAK;IACT,EAAE;AAEN,EAAE\"}")
== DIAGNOSTICS ==

[]
