crates/swc-optimizer/core/src/snapshots/qwik_core__test__issue_964.snap
---
source: src/test.rs
expression: output
---
==INPUT==

import { component$ } from "@qwik.dev/core";

export const App = component$(() => {
  console.log(function* (lo: any, t: any) {
    console.log(yield (yield lo)(t.href).then((r) => r.json()));
  });

  return <p>Hello Qwik</p>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAEA,OAAO,MAAM,oBAAM,4EAMhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = ()=>{
    console.log(function*(lo, t) {
        console.log((yield (yield lo)(t.href).then((r)=>r.json())));
    });
    return /*#__PURE__*/ _jsxSorted("p", null, null, "Hello Qwik", 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";yCAE8B;IAC5B,QAAQ,GAAG,CAAC,UAAW,EAAO,EAAE,CAAM;QACpC,QAAQ,GAAG,CAAC,CAAA,MAAM,CAAC,MAAM,EAAE,EAAE,EAAE,IAAI,EAAE,IAAI,CAAC,CAAC,IAAM,EAAE,IAAI,GAAE;IAC3D;IAEA,qBAAO,WAAC,iBAAE;AACZ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    77,
    230
  ]
}
*/
== DIAGNOSTICS ==

[]
