crates/swc-optimizer/core/src/snapshots/qwik_core__test__lib_mode_fn_signal.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$ } from "@qwik.dev/core";
export const Counter = component$(() => {
  const count = useSignal(0);

  return (
    <div>
      <p>Count: {count.value}</p>
      <p>
        <button onClick$={() => count.value++}>Increment</button>
      </p>
    </div>
  );
});

============================= test.ts ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_zTmRHlL09Gg = () => import("./test.tsx_Counter_component_zTmRHlL09Gg");
export const Counter = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_zTmRHlL09Gg, "Counter_component_zTmRHlL09Gg"),
);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AACA,OAAO,MAAM,wBAAU,gFAWpB"}',
);
============================= test.tsx_Counter_component_zTmRHlL09Gg.ts (ENTRY POINT)==
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_Pq1pmfmJWUI = () =>
  import("./test.tsx_Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI");
export const Counter_component_zTmRHlL09Gg = () => {
  const count = useSignal(0);
  return /*#__PURE__*/ _jsxSorted(
    "div",
    null,
    null,
    [
      /*#__PURE__*/ _jsxSorted("p", null, null, ["Count: ", _wrapProp(count)], 3, null),
      /*#__PURE__*/ _jsxSorted(
        "p",
        null,
        null,
        /*#__PURE__*/ _jsxSorted(
          "button",
          null,
          {
            "q-e:click": /*#__PURE__*/ qrl(
              i_Pq1pmfmJWUI,
              "Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI",
              [count],
            ),
          },
          "Increment",
          3,
          null,
        ),
        3,
        null,
      ),
    ],
    3,
    "u6_0",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;6CACkC;IAChC,MAAM,QAAQ,UAAU;IAExB,qBACE,WAAC;sBACC,WAAC;YAAE;sBAAQ;;sBACX,WAAC,+BACC,WAAC;YAAO,WAAQ;;;WAAuB;;AAI/C"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Counter_component_zTmRHlL09Gg",
  "entry": null,
  "displayName": "test.tsx_Counter_component",
  "hash": "zTmRHlL09Gg",
  "canonicalFilename": "test.tsx_Counter_component_zTmRHlL09Gg",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    80,
    278
  ]
}
*/
============================= test.tsx_Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI.ts (ENTRY POINT)==
import { _captures } from "@qwik.dev/core";
export const Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI = () => {
  const count = _captures[0];
  return count.value++;
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";oEAQ0B;;WAAM,MAAM,KAAK"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI",
  "entry": null,
  "displayName": "test.tsx_Counter_component_div_p_button_q_e_click",
  "hash": "Pq1pmfmJWUI",
  "canonicalFilename": "test.tsx_Counter_component_div_p_button_q_e_click_Pq1pmfmJWUI",
  "path": "",
  "extension": "ts",
  "parent": "Counter_component_zTmRHlL09Gg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    210,
    229
  ],
  "captureNames": [
    "count"
  ]
}
*/
== DIAGNOSTICS ==

[]
